<resources>
    <string name="app_name">GrowWell</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_peta">Cek Rumah Sakit</string>
    <string name="title_riwayat">Riwayat</string>
    <string name="title_profil">Akun</string>
    <string name="google_maps_key">API_KEY</string>
    <string name="profile_out">Keluar</string>
    <string name="profile_about">Tentang Kami</string>
    <string name="profile_sk">Syarat dan Ketentuan</string>
    <string name="profile_edit">Edit Profile</string>
    <string name="panah"> > </string>
    <string name="s_kJudul">Syarat dan Ketentuan</string>
    <string name="s_kTerm0">Selamat datang di GrowWell. Dengan menggunakan aplikasi GrowWell ("Aplikasi"), Anda menyetujui untuk terikat oleh syarat dan ketentuan berikut ("Syarat dan Ketentuan"). Syarat ini mengatur penggunaan Anda terhadap GrowWell yang disediakan oleh PT. GrowWell, Tbk .
        </string>
    <string name="s_kTerm1">1. Pendaftaran: Untuk menggunakan Aplikasi ini, Anda mungkin perlu mendaftar dan menyediakan informasi tertentu tentang diri Anda. Anda setuju untuk memberikan informasi yang benar, akurat, dan terkini, dan memperbaharui informasi ini jika ada perubahan.
        </string>
    <string name="s_kTerm2"> 2. Privasi:Kebijakan privasi kami, yang menjelaskan bagaimana kami menggunakan informasi Anda, adalah bagian integral dari Syarat dan Ketentuan ini. Dengan menggunakan Aplikasi ini, Anda menyetujui pemrosesan informasi tersebut sesuai dengan kebijakan privasi kami.
        </string>
    <string name="s_kTerm3">3. Penggunaan Aplikasi:Aplikasi ini menyediakan prediksi stunting yang dapat digunakan untuk melakukan checking terhadap kondisi kesehatan anak. Anda setuju untuk menggunakan Aplikasi ini hanya untuk tujuan yang sah dan tidak akan menggunakan aplikasi ini untuk mengirim atau menyimpan materi yang melanggar hukum atau untuk tujuan penipuan.
        </string>
    <string name="s_kTerm4">4. Hak Kekayaan Intelektual:Semua hak kekayaan intelektual terkait dengan Aplikasi ini adalah milik PT. GrowWell, Tbk atau pemberi lisensi kami. Kecuali yang diizinkan oleh hukum, Anda tidak boleh menyalin, memodifikasi, menyebarkan, menjual, atau menyewakan bagian mana pun dari Aplikasi kami tanpa izin tertulis dari kami.
        </string>
    <string name="s_kTerm5">5. Pembatasan Akses:PT. GrowWell, Tbk berhak untuk menangguhkan atau menghentikan akses Anda ke Aplikasi jika Anda melanggar syarat dan ketentuan ini.
        </string>
    <string name="s_kTerm6">6. Modifikasi Syarat:PT. GrowWell, Tbk dapat mengubah Syarat dan Ketentuan ini dari waktu ke waktu. Setiap perubahan akan efektif segera setelah penerbitan Syarat dan Ketentuan yang direvisi. Penggunaan lanjutan Aplikasi ini setelah perubahan tersebut akan dianggap sebagai penerimaan Anda terhadap perubahan tersebut.
        </string>
    <string name="s_kTerm7">7. Batasan Tanggung Jawab:PT. GrowWell, Tbk tidak bertanggung jawab atas kerugian atau kerusakan yang mungkin Anda alami dari penggunaan Aplikasi ini, kecuali di mana hal ini dilarang oleh hukum.
        </string>
    <string name="s_kTerm8">8. Hukum yang Berlaku:Syarat dan Ketentuan ini diatur oleh hukum Indonesia, dan Anda setuju bahwa pengadilan Indonesia akan memiliki yurisdiksi eksklusif atas setiap sengketa yang mungkin timbul di bawah atau sehubungan dengan Syarat dan Ketentuan ini.
        </string>
    <string name="s_kTerm9">9. Kontak:Jika Anda memiliki pertanyaan atau kekhawatiran mengenai Syarat dan Ketentuan ini, silakan hubungi kami di @contohemail@gmail.com.
        </string>
    <string name="s_kTerm10">10. Penghentian: Anda dapat menghentikan penggunaan Aplikasi kapan saja dengan menghapus semua salinan aplikasi yang Anda miliki.</string>
    <string name="about0">Selamat Datang di GrowWell</string>
    <string name="about1">GrowWell adalah aplikasi yang dirancang khusus untuk mendukung para ibu dalam memberikan perawatan terbaik bagi anak-anak mereka, terutama untuk mencegah kondisi stunting yang dapat mempengaruhi perkembangan anak. Melalui GrowWell, kami berkomitmen untuk memberikan edukasi yang mendalam tentang pentingnya nutrisi dan kesehatan bagi balita.
        </string>
    <string name="about2">Misi kami adalah memberdayakan ibu di seluruh Indonesia dengan pengetahuan dan alat yang diperlukan untuk mendukung pertumbuhan dan pengembangan anak-anak mereka secara optimal. Kami percaya bahwa pencegahan stunting adalah langkah awal yang penting untuk masa depan yang lebih cerah bagi generasi mendatang.
        </string>
    <string name="about3">Edukasi Nutrisi: Dapatkan informasi dan tips tentang nutrisi yang penting untuk pertumbuhan balita. Kami menyediakan panduan nutrisi yang mudah diikuti yang telah disusun oleh ahli gizi terkemuka.
        </string>
    <string name="about4">Informasi Imunisasi: Akses jadwal imunisasi yang up-to-date untuk memastikan bahwa anak Anda menerima semua vaksinasi penting tepat waktu untuk melindungi mereka dari penyakit serius.
        </string>
    <string name="about5">Kalkulator Stunting: Cek potensi stunting dengan mudah menggunakan kalkulator stunting kami. Masukkan data yang diperlukan dan aplikasi akan membantu menilai risiko stunting pada anak Anda, memberikan rekomendasi untuk tindakan pencegahan lebih lanjut.
        </string>
    <string name="about6">Artikel dan Berita Terkini: Tetap terinformasi dengan artikel dan berita terbaru tentang kesehatan anak dan nutrisi. Dapatkan akses eksklusif ke sumber daya yang akan membantu Anda dalam mengasuh dan memberikan yang terbaik untuk buah hati Anda.
        </string>
    <string name="about7">Dengan GrowWell, Anda tidak hanya mendapatkan akses ke alat dan informasi yang bermanfaat, tetapi juga menjadi bagian dari komunitas ibu yang mendukung satu sama lain dalam memberikan awal yang sehat untuk anak-anak mereka. Aplikasi ini gratis dan mudah digunakan, dirancang untuk menjadi teman terbaik setiap ibu dalam perjalanan mengasuh anak Untuk informasi lebih lanjut, kunjungi website kami atau hubungi kami melalui email di [email email]. Kami senang bisa menjadi bagian dari perjalanan Anda dalam mengasuh anak.
        </string>
    <string name="about8">"Setiap anak berhak tumbuh dengan baik dan sehat - GrowWell bersama Anda dalam setiap langkah."
        </string>
    <string name="immunization_name">Judul Artikel</string>
    <string name="immunization_description">Deskripsi</string>
    <string-array name="data_name">
        <item>Immunization Information</item>
        <item>7 konsekuensi dan risiko jika anak tidak mendapatkan imunisasi rutin</item>
        <item>Imunisasi DT (Difteri Tetanus) - Manfaat dan Efek Sampingnya</item>
        <item>Pentingnya Imunisasi Anak bagi Perlindungan terhadap Penyakit</item>
        <item>Lindungi Anak Indonesia Dari Berbagai Penyakit, Pemerintah Perluas Jenis Imunisasi Menjadi 14 Antigen, Cek Yuk</item>
        <item>Kendalikan Kanker Servix Sejak Dini dengan Imunisasi</item>
    </string-array>
    <string name="title_edit_account">Edit Akun</string>
    <string name="title_syarat_ketentuan">Syarat dan Ketentuan</string>
    <string name="title_about">Tentang Kami</string>
</resources>