<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.growwell.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_peta"
        android:name="com.example.growwell.ui.peta.PetaFragment"
        android:label="@string/title_peta"
        tools:layout="@layout/fragment_peta" />

    <fragment
        android:id="@+id/navigation_riwayat"
        android:name="com.example.growwell.ui.riwayat.RiwayatFragment"
        android:label="@string/title_riwayat"
        tools:layout="@layout/fragment_riwayat" />

    <fragment
        android:id="@+id/navigation_akun"
        android:name="com.example.growwell.ui.akun.AkunFragment"
        android:label="@string/title_profil"
        tools:layout="@layout/fragment_akun">
        <action
            android:id="@+id/action_navigation_akun_to_editAccountFragment"
            app:destination="@id/editAccountFragment" />
        <action
            android:id="@+id/action_navigation_akun_to_syaratKetentuanFragment"
            app:destination="@id/syaratKetentuanFragment" />
        <action
            android:id="@+id/action_navigation_akun_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>

    <fragment
        android:id="@+id/editAccountFragment"
        android:name="com.example.growwell.ui.akun.EditAccountFragment"
        android:label="@string/title_edit_account"
        tools:layout="@layout/fragment_edit_account" />

    <fragment
        android:id="@+id/syaratKetentuanFragment"
        android:name="com.example.growwell.ui.akun.Syarat_KetentuanFragment"
        android:label="@string/title_syarat_ketentuan"
        tools:layout="@layout/fragment_syarat__ketentuan" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.growwell.ui.akun.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
</navigation>
