<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.akun.Syarat_KetentuanFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="50dp"
                android:text="@string/s_kJudul"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_kTerm0"
                android:textColor="@color/black"
                android:padding="21dp"
                android:paddingBottom="10dp"
                android:textStyle="normal"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_kTerm1"
                android:textColor="@color/black"
                android:padding="20dp"
                android:paddingBottom="10dp"
                android:textStyle="normal"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_kTerm2"
                android:textColor="@color/black"
                android:padding="20dp"
                android:paddingBottom="10dp"
                android:textStyle="normal"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_kTerm3"
                android:textColor="@color/black"
                android:padding="20dp"
                android:paddingBottom="10dp"
                android:textStyle="normal"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_kTerm4"
                android:textColor="@color/black"
                android:padding="20dp"
                android:paddingBottom="10dp"
                android:textStyle="normal"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_kTerm5"
                android:textColor="@color/black"
                android:padding="20dp"
                android:paddingBottom="10dp"
                android:textStyle="normal"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_kTerm6"
                android:textColor="@color/black"
                android:padding="20dp"
                android:paddingBottom="10dp"
                android:textStyle="normal"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_kTerm7"
                android:textColor="@color/black"
                android:padding="20dp"
                android:paddingBottom="10dp"
                android:textStyle="normal"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_kTerm8"
                android:textColor="@color/black"
                android:padding="20dp"
                android:paddingBottom="10dp"
                android:textStyle="normal"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_kTerm9"
                android:textColor="@color/black"
                android:padding="20dp"
                android:paddingBottom="10dp"
                android:textStyle="normal"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_kTerm10"
                android:textColor="@color/black"
                android:padding="20dp"
                android:paddingBottom="10dp"
                android:textStyle="normal"
                android:justificationMode="inter_word"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>