<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.akun.AboutFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tentang Kami"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/about0"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textAlignment="center"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/about1"
                android:textColor="@color/black"
                android:textSize="13dp"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/about2"
                android:textColor="@color/black"
                android:textSize="13dp"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/about3"
                android:textColor="@color/black"
                android:textSize="13dp"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/about4"
                android:textColor="@color/black"
                android:textSize="13dp"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/about5"
                android:textColor="@color/black"
                android:textSize="13dp"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/about6"
                android:textColor="@color/black"
                android:textSize="13dp"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/about7"
                android:textColor="@color/black"
                android:textSize="13dp"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/about8"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold"
                android:justificationMode="inter_word"/>
        </LinearLayout>
    </ScrollView>

</FrameLayout>