<!-- fragment_akun.xml -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="#FFE9E7"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="172dp"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/profileName"
                        android:layout_width="wrap_content"
                        android:layout_height="43dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="24dp"
                        android:text="Anindira Adista"
                        android:textColor="#000000"
                        android:textSize="50px"
                        android:textStyle="bold"
                        android:textAppearance="?attr/textAppearanceBody1"/>

                    <TextView
                        android:id="@+id/profileEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="anindira123@gmail.com"
                        android:textAppearance="?attr/textAppearanceBody2" />

                    <TextView
                        android:id="@+id/profileBirthDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="16dp"
                        android:text="02 January 1995"
                        android:textAppearance="?attr/textAppearanceBody2" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_editProfile"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:backgroundTint="#FFFFFF"
                android:drawableLeft="@drawable/account_profile"
                android:drawableRight="@drawable/ic_next_24"
                android:text="@string/profile_edit"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btn_syaratKetentuan"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2px"
                android:backgroundTint="#FFFFFF"
                android:drawableLeft="@drawable/s_k_profile"
                android:drawableRight="@drawable/ic_next_24"
                android:text="@string/profile_sk"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btn_tentangKami"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2px"
                android:backgroundTint="#FFFFFF"
                android:drawableLeft="@drawable/baseline_info_outline_24"
                android:drawableRight="@drawable/ic_next_24"
                android:text="@string/profile_about"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btn_keluar"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#FF9B9B"
                android:drawableLeft="@drawable/logout_profile"
                android:text="@string/profile_out"
                android:textSize="30px" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>
